# ex02-multi-agent-debate

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
config/: debate.yaml  models.yaml  provider_config.json  rate_limits.json  skills.yaml
docs/: PLAN.md  PRD.md  PROMPTS.md  TODO.md
scripts/: check_file_length.py
skills/con_argument_skill/: SKILL.md  prompt.md
skills/evidence_retrieval_skill/: SKILL.md  prompt.md
skills/json_protocol_skill/: SKILL.md  prompt.md
skills/judge_moderation_skill/: SKILL.md  prompt.md
skills/pro_argument_skill/: SKILL.md  prompt.md
skills/rebuttal_skill/: SKILL.md  prompt.md
skills/verdict_skill/: SKILL.md  prompt.md
src/debate/: __init__.py  gatekeeper.py  logger.py  rate_limiter.py  runner.py  watchdog.py
src/debate/agents/: __init__.py  base.py  con.py  judge.py  judge_moderation.py  parsing.py  pro.py  tool_loop.py  verdict_builder.py
src/debate/cli/: __init__.py  commands.py  display.py  entry.py  menu.py
src/debate/models/: __init__.py  config.py  message.py  skill.py  verdict.py
src/debate/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_llm.py  mock_search.py
src/debate/sdk/: __init__.py  config_loader.py  sdk.py  transcript.py
src/debate/skills/: __init__.py  debater_skills.py  definitions.py  judge_skills.py  protocol_skills.py  registry.py  router.py
tests/: conftest.py  test_agents.py  test_gatekeeper.py  test_judge.py  test_models.py  test_pro_con_agents.py  test_runner.py  test_sdk.py  test_skill_dirs.py  test_skill_router.py  test_skills.py
tests/integration/: test_runner.py  test_sdk.py
tests/unit/: test_config_loading.py  test_evidence_retrieval.py  test_file_lengths.py  test_judge.py  test_models.py  test_pro_con_agents.py  test_retry_config.py  test_schema_validation.py  test_skill_dirs.py  test_skill_router_runtime.py  test_watchdog.py
