[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debate"
version = "0.1.0"
description = "Multi-agent AI debate system — Exercise 02, Orchestration of AI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "duckduckgo-search>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.hatch.build.targets.wheel]
packages = ["src/debate"]
